# pythia-soccer

./: 01-S1-analysis.ipynb  01-Season_01.ipynb  02-Pred-Frequentist.ipynb  02-Season_02.ipynb  03-S2-Pred-Bayesian.ipynb  04-S2-Pred-Bayesian-MC.ipynb  04-S2-Pred-Baysian-MC.ipynb  README.md  pyproject.toml
