[tool.poetry]
name = "pythia-soccer"
version = "0.1.0"
description = ""
authors = ["Hasib Ahmed <hasib@hasib-ahmed.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
pymc = "^5.16.1"
scikit-learn = "^1.5.0"
aesara = "^2.9.3"
theano = "^1.0.5"
statsmodels = "^0.14.2"
scipy = "^1.14.0"
ipywidgets = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
